--- a/indexPR1.html
+++ b/indexPR1.html
@@ -6,6 +6,14 @@
   <link rel="shortcut icon" type="image/x-icon" href="favicon64x64.ico">
   <link rel="stylesheet" type="text/css" href="CSSPR1.css">
   <style>
+
+    body, .paddingbackground {
+      background: #dfdfdf;
+    }
+
+    table {
+      background: white;
+    }
     img[class="fullWidth"], img[id="fullWidth"] {
       width: 100% !important;
       height: auto !important;
@@ -26,7 +34,7 @@
 
   </tr>
   <tr> <!--2px block-->
-    <td height="2"></td>
+    <td height="2" class="paddingbackground"></td>
   </tr>
   <tr> <!--head image block-->
     <td>
@@ -77,7 +85,7 @@
     </td>
   </tr>
   <tr> <!--10px row-->
-    <td height="10"></td>
+    <td height="10" class="paddingbackground"></td>
   </tr>
   <tr> <!--"remember to make" block-->
     <td>
@@ -122,10 +130,10 @@
                               <img src="Icon.png" width="75" height="75">
                             </td>
                             <td style="text-align: center">
-                              <img src="Icon.png" width="75" height="75">
+                              <img src="Icon1.png" width="75" height="75">
                             </td>
                             <td style="text-align: center">
-                              <img src="Icon.png" width="75" height="75">
+                              <img src="Icon2.png" width="75" height="75">
                             </td>
                           </tr>
                         </table>
@@ -174,15 +182,15 @@
       </table>
     </td>
   </tr>
-  <tr>
-    <td height="10"></td>
+  <tr> <!--10px gap-->
+    <td height="10" class="paddingbackground"></td>
   </tr>
   <tr> <!--jack block-->
     <td>
       <table cellspacing="0" cellpadding="0" width="640">
         <tr>
           <td valign="center">
-            <img src="Jack.png" alt="" width="640" height="220">
+            <img src="Jack.png" alt="" width="640" height="220" class="fullWidth">
           </td>
         </tr>
         <tr>
@@ -230,15 +238,14 @@
       <table cellspacing="0" cellpadding="0" width="640">
         <tr>
           <td valign="center">
-            <img src="Jane.png" alt="" width="640" height="165">
+            <img src="Jane.png" alt="" width="640" height="165" class="fullWidth">
           </td>
         </tr>
         <tr>
           <td height="30px"></td>
         </tr>
         <tr>
-          <td width="640"
-              style="text-align: center; font-family: 'coopbank-extrabold', Arial, sans-serif; font-size:20px; color:#032861; font-weight:bold;">
+          <td width="640" style="text-align: center; font-family: 'coopbank-extrabold', Arial, sans-serif; font-size:20px; color:#032861; font-weight:bold;">
             Your mortgage is helping Jane
           </td>
         </tr>
@@ -264,6 +271,58 @@
         </tr>
         <tr>
           <td height="36"></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr> <!--10px gap-->
+    <td height="10px" class="paddingbackground"></td>
+  </tr>
+  <tr>
+    <td>
+      <table cellpadding="0" cellspacing="0" width="640">
+        <tr>
+          <td height="35"></td>
+        </tr>
+        <tr>
+          <td style="text-align: center">
+            <img src="part%20of%20the%20bank.png" alt="" height="75" width="75">
+          </td>
+        </tr>
+        <tr>
+          <td height="15px"></td>
+        </tr>
+        <tr>
+          <td style="text-align: center; font-family: 'coopbank-extrabold', Arial, sans-serif; font-size:20px; color:#032861; font-weight:bold;">
+            Part of the bank that cares
+          </td>
+        </tr>
+        <tr>
+          <td height="20"></td>
+        </tr>
+        <tr>
+          <td>
+            <table cellspacing="0" cellpadding="0">
+              <tr>
+                <td width="40"></td>
+                <td style="font-family:Arial,Helvetica,Tahoma,sans-serif; font-size:14px; color:#333333; text-align: center">
+                  Platform is the mortgage lending arm of The Co-operative Bank, which means we’re part of a bank built on co-operative values that are over 145 years old and continue to connect us together today
+                  – from our colleagues and customers, to the businesses that bank with us and the charities we support. If you should ever find yourself in financial difficulty,
+                  we’ll be there to help you. Simply call 01752 236550§ to speak to a member of our team.
+                </td>
+                <td width="40"></td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
         </tr>
       </table>
     </td>
